fix(type_widgets/code): read-only bar not visible for dark themes

--- a/apps/client/src/widgets/react/InfoBar.css
+++ b/apps/client/src/widgets/react/InfoBar.css
@@ -14,8 +14,8 @@
 
 .info-bar-subtle {
     color: var(--muted-text-color);
+    background: var(--main-background-color);
     border-bottom: 1px solid var(--main-border-color);
     margin-block: 0;
-    margin-inline: 10px;
-    padding-inline: 12px;
+    padding-inline: 22px;
 }
